--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://georgijbudik.github.io/project-GOreITshniki/",
+  "homepage": "https://GoitStudentsWorks.github.io/fs-86-react-node-georgijbudik/",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
